# Detecting-Breaks-Via-the-Fused-Lasso

./: CITATION.cff  LICENSE  README.md  environment.yml  monte_carlo_jbes.py  panel_breaks_fused_lasso.py  pyproject.toml  requirements.txt
TimeSeriesP/: __init__.py  lag.py
docs/: REPRODUCIBILITY_NOTES.md
paper/: PAPER_METADATA.md
