[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseriesp"
version = "0.1.0"
description = "Research companion package for fused-lasso panel-break simulations."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["TimeSeriesP"]
